# AI_OpenAI_Econ_Toolkit

./: LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
cli/: cli.py  cli_old.py
docs/: cli.md  dashboards.md  index.md  installation.md  pdf.md  prompts.md  repomap.md  scenarios.md  webui.md
open_ai_econ/: calculator.py  charts.py  compare.py  cost_models.py  export.py  html_dashboard.py  html_dashboard_multi.py  loader.py  monthly.py  pdf_export.py  scenarios.py  yaml_runner.py
open_ai_econ/api/: fastapi_app.py
output/: dashboard.html  dashboard_gpt-5.4_20260329_231014.html  multi_dashboard_20260329_233136.html
pricing/: pricing_openai.json
scenarios/: agentic_automation.yaml  basic_usage.yaml  batch_processing.yaml  customer_support.yaml  growth_projection.yaml  rag_pipeline.yaml  scenario.yaml  stt_pipeline.yaml
tests/: test_cost_models.py  test_loader.py  test_monthly.py  test_yaml_runner.py
webui/: app.py  scenario_loader.py
